# spotiflac-backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  init_structure.ps1  pyproject.toml  structure.ps1
src/spotiflac_backend/: main.py
src/spotiflac_backend/api/v1/: health.py  spotify.py  torrents.py
src/spotiflac_backend/core/: config.py
src/spotiflac_backend/models/: spotify.py  torrent.py
src/spotiflac_backend/services/: nnm_club_service.py  pirate_bay_service.py  rutracker.py  spotify_public.py
tests/: test_health.py  test_rutracker.py
