[tool.poetry]
name = "spotiflac-backend"
version = "0.1.0"
description = "Backend for SpotiFlac service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.116.1"
uvicorn = { version = "^0.21.0", extras = ["standard"] }
httpx = "^0.28.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.3"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
aioredis = "^2.0.1"
redis = { version = "^4.5.5" }
fastapi-cache2 = { version = "^0.2.2", extras = ["redis"] }
cloudscraper = "^1.2.69"
bencodepy = "^0.9.5"
rapidfuzz = "^3.13.0"
selenium = "^4.0.0"
aiohttp = "^3.12.15"
libtorrent = ">=2.0.11,<2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.20.3"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"